<?xml version="1.0"?>
<package format="2">
  <name>mav_arm_force_controlled</name>
  <version>0.0.1</version>
  <description>
    TODO description
  </description>

  <maintainer email="lschai@student.ethz.ch">Leonard Schai</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>roslib</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>

  <depend>rqt_gui</depend>
  <depend>effort_controllers</depend>
</package>
